# ohtu-s2022-palautukset

./: .gitignore  README.md  retro.md
viikko1/nhl-statistics-1/src/: index.py  player.py  player_reader.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: haara1-uusi.txt  haara2-uusi.txt  haara2-uusin.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py  varasto.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/: AppLibrary.py  index.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/: tagging.txt
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: index.py  ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: toinen_tiedosto.txt  versionhallintaharjoitus.txt
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: erotus.py  kayttoliittyma.py  kumoa.py  nollaus.py  sovelluslogiikka.py  summa.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
