[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Sami Reimavuo <sami@reimavuo.net>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
